fix: stop stretching user icon in post header notification

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2349,6 +2349,7 @@ $header-line-height: 34px;
           div.usericon {
             margin-right: 10px;
             max-width: 37px;
+            flex-shrink: 0;
           }
         }
       }
